DD-10: Add testing scene

--- a/ui/src/main/resources/cz/masci/drd/ui/main-scene.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/main-scene.fxml
@@ -8,6 +8,6 @@
             fx:controller="cz.masci.drd.ui.MainController"
             prefHeight="100.0" prefWidth="350.0" spacing="10" alignment="CENTER">
 
-    <Label fx:id="weatherLabel"/>
-    <!--<Button onAction="#loadWeatherForecast">Get weather</Button>-->
+    <Label fx:id="monsterLabel"/>
+    <Button onAction="loadNextMonster">Get next Monster</Button>
 </VBox>
