--- a/ui/src/main/resources/cz/masci/drd/ui/monster/fxml/monster-edit.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/monster/fxml/monster-edit.fxml
@@ -12,20 +12,59 @@
 
 <DialogPane fx:id="dialog" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <content>
-      <GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="5.0">
+      <GridPane hgap="5.0" minHeight="-Infinity" minWidth="-Infinity" vgap="5.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" vgrow="NEVER" />
-          <RowConstraints minHeight="10.0" valignment="TOP" vgrow="ALWAYS" />
+          <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+          <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="20.0" valignment="TOP" vgrow="ALWAYS" />
         </rowConstraints>
          <children>
-            <Label text="Name" />
-            <Label text="Description" GridPane.rowIndex="1" />
+            <Label text="Jméno nestvůry" />
             <TextField fx:id="name" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
-            <TextArea fx:id="description" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="Životaschopnost" GridPane.rowIndex="1" />
+            <TextField fx:id="viability" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="Útočné číslo" GridPane.rowIndex="2" />
+            <TextField fx:id="attack" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="Obranné číslo" GridPane.rowIndex="3" />
+            <TextField fx:id="defence" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="Odolnost" GridPane.rowIndex="4" />
+            <TextField fx:id="endurance" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="Velikost" GridPane.rowIndex="5" />
+            <TextField fx:id="dimension" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label text="Bojovnost" GridPane.rowIndex="6" />
+            <TextField fx:id="combativeness" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <Label text="Zranitelnost" GridPane.rowIndex="7" />
+            <TextField fx:id="vulnerability" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Label text="Pohyblivost" GridPane.rowIndex="8" />
+            <TextField fx:id="moveability" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <Label text="Vytrvalost" GridPane.rowIndex="9" />
+            <TextField fx:id="stamina" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <Label text="Inteligence" GridPane.rowIndex="10" />
+            <TextField fx:id="intelligence" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            <Label text="Přesvědčení" GridPane.rowIndex="11" />
+            <TextField fx:id="conviction" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+            <Label text="Poklady" GridPane.rowIndex="12" />
+            <TextField fx:id="treasure" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+            <Label text="Zkušenost" GridPane.rowIndex="13" />
+            <TextField fx:id="experience" GridPane.columnIndex="1" GridPane.rowIndex="13" />
+            <Label text="Popis" GridPane.rowIndex="14" />
+            <TextArea fx:id="description" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="14" GridPane.vgrow="ALWAYS" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
