--- a/springfx/src/main/resources/cz/masci/springfx/controller/fxml/master-view.fxml
+++ b/springfx/src/main/resources/cz/masci/springfx/controller/fxml/master-view.fxml
@@ -1,25 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
 <BorderPane fx:id="borderPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <VBox fx:id="items" alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
-            <ToolBar>
-              <items>
-                <Button fx:id="newItem" mnemonicParsing="false" onAction="#onNewItem" text="New" />
-                  <Button fx:id="saveAll" mnemonicParsing="false" onAction="#onSaveAll" text="Save All" />
-                  <Separator orientation="VERTICAL" />
-                  <Button fx:id="delete" mnemonicParsing="false" onAction="#onDelete" text="Delete" />
-              </items>
-            </ToolBar>
             <TableView fx:id="tableView" VBox.vgrow="ALWAYS" />
          </children>
          <BorderPane.margin>
@@ -27,4 +15,17 @@
          </BorderPane.margin>
       </VBox>
    </left>
+   <top>
+      <ToolBar BorderPane.alignment="CENTER">
+        <items>
+          <Button fx:id="newItem" mnemonicParsing="false" onAction="#onNewItem" text="New" />
+            <Button fx:id="saveAll" mnemonicParsing="false" onAction="#onSaveAll" text="Save All" />
+            <Separator orientation="VERTICAL" />
+            <Button fx:id="delete" mnemonicParsing="false" onAction="#onDelete" text="Delete" />
+        </items>
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="10.0" right="5.0" />
+         </BorderPane.margin>
+      </ToolBar>
+   </top>
 </BorderPane>
