--- a/ui/src/main/resources/cz/masci/drd/ui/battle/slide/impl/fxml/battle-duellist-slide.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/slide/impl/fxml/battle-duellist-slide.fxml
@@ -34,24 +34,24 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Název" />
-            <TextField GridPane.columnIndex="1" />
+            <TextField GridPane.columnIndex="1" fx:id="txtName"/>
             <Label text="Útočné číslo" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="txtOffense"/>
             <Label text="Obranné číslo" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="txtDefense"/>
             <Label text="Životy" GridPane.rowIndex="3" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="txtLive"/>
          </children>
       </GridPane>
       <FlowPane hgap="10.0" VBox.vgrow="NEVER">
          <children>
-            <Button mnemonicParsing="false" text="Přidat" />
-            <Button mnemonicParsing="false" text="Upravit" />
-            <Button mnemonicParsing="false" text="Odebrat" />
+            <Button mnemonicParsing="false" text="Přidat" fx:id="btnAdd" onAction="#onAddDuellist"/>
+            <Button mnemonicParsing="false" text="Upravit" fx:id="btnEdit" onAction="#onEditDuellist"/>
+            <Button mnemonicParsing="false" text="Odebrat" fx:id="btnDelete" onAction="#onDeleteDuellist"/>
          </children>
       </FlowPane>
       <GridPane VBox.vgrow="ALWAYS">
@@ -64,11 +64,7 @@
         </rowConstraints>
          <children>
             <Label text="Label" />
-            <TableView GridPane.rowIndex="1">
-              <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
-              </columns>
+            <TableView GridPane.rowIndex="1" fx:id="tblDuellist">
             </TableView>
          </children>
       </GridPane>
