--- a/ui/src/main/resources/cz/masci/drd/ui/battle/action/impl/fxml/close-combat-select-action-controller.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/action/impl/fxml/close-combat-select-action-controller.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -22,10 +23,19 @@
   ~  along with Foobar. If not, see <https://www.gnu.org/licenses/>.
   -->
 
-
-<AnchorPane prefHeight="45.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Label layoutX="14.0" layoutY="14.0" text="Obránce" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="14.0" />
-      <ComboBox fx:id="duellistBox" layoutX="133.0" layoutY="10.0" prefHeight="25.0" prefWidth="400.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
-   </children>
-</AnchorPane>
+<GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+        <ColumnConstraints hgrow="ALWAYS" minWidth="200.0" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="25.0" valignment="TOP" vgrow="SOMETIMES" />
+    </rowConstraints>
+    <children>
+        <Label text="Obránce">
+         <padding>
+            <Insets top="3.0" />
+         </padding></Label>
+        <ComboBox fx:id="duellistBox" prefHeight="25.0" prefWidth="400.0" GridPane.columnIndex="1" />
+    </children>
+</GridPane>
