--- a/ui/src/main/resources/cz/masci/drd/ui/battle/action/impl/fxml/close-combat-select-action.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/action/impl/fxml/close-combat-select-action.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -25,17 +24,12 @@
 
 <GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
-        <ColumnConstraints hgrow="ALWAYS" minWidth="200.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0"/>
+        <ColumnConstraints hgrow="ALWAYS" minWidth="200.0"/>
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="25.0" valignment="TOP" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="25.0" prefHeight="30" valignment="CENTER" vgrow="NEVER"/>
     </rowConstraints>
-    <children>
-        <Label text="Obránce">
-         <padding>
-            <Insets top="3.0" />
-         </padding></Label>
-        <ComboBox fx:id="duellistBox" prefHeight="25.0" prefWidth="400.0" GridPane.columnIndex="1" />
-    </children>
+    <Label text="Obránce"/>
+    <ComboBox fx:id="duellistBox" prefHeight="25.0" prefWidth="400.0" GridPane.columnIndex="1"/>
 </GridPane>
