--- a/ui/src/main/resources/cz/masci/drd/ui/battle/slide/impl/fxml/battle-duellist-slide.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/slide/impl/fxml/battle-duellist-slide.fxml
@@ -23,50 +23,52 @@
   -->
 
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <GridPane>
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
-          <ColumnConstraints hgrow="ALWAYS" minWidth="200.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Název" />
-            <TextField GridPane.columnIndex="1" fx:id="txtName"/>
-            <Label text="Útočné číslo" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="txtOffense"/>
-            <Label text="Obranné číslo" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="txtDefense"/>
-            <Label text="Životy" GridPane.rowIndex="3" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="txtLive"/>
-         </children>
-      </GridPane>
-      <FlowPane hgap="10.0" VBox.vgrow="NEVER">
-         <children>
-            <Button mnemonicParsing="false" text="Přidat" fx:id="btnAdd" onAction="#onAddDuellist"/>
-            <Button mnemonicParsing="false" text="Upravit" fx:id="btnEdit" onAction="#onEditDuellist"/>
-            <Button mnemonicParsing="false" text="Odebrat" fx:id="btnDelete" onAction="#onDeleteDuellist"/>
-         </children>
-      </FlowPane>
-      <GridPane VBox.vgrow="ALWAYS">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="30.0" vgrow="NEVER" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Label" />
-            <TableView GridPane.rowIndex="1" fx:id="tblDuellist">
-            </TableView>
-         </children>
-      </GridPane>
-   </children>
+<VBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
+        AnchorPane.topAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0"
+>
+    <children>
+        <GridPane>
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0"/>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="200.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <Label text="Název"/>
+                <TextField GridPane.columnIndex="1" fx:id="txtName"/>
+                <Label text="Útočné číslo" GridPane.rowIndex="1"/>
+                <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="txtOffense"/>
+                <Label text="Obranné číslo" GridPane.rowIndex="2"/>
+                <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="txtDefense"/>
+                <Label text="Životy" GridPane.rowIndex="3"/>
+                <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="txtLive"/>
+            </children>
+        </GridPane>
+        <FlowPane hgap="10.0" VBox.vgrow="NEVER">
+            <children>
+                <Button mnemonicParsing="false" text="Přidat" fx:id="btnAdd" onAction="#onAddDuellist"/>
+                <Button mnemonicParsing="false" text="Upravit" fx:id="btnEdit" onAction="#onEditDuellist"/>
+                <Button mnemonicParsing="false" text="Odebrat" fx:id="btnDelete" onAction="#onDeleteDuellist"/>
+            </children>
+        </FlowPane>
+        <GridPane VBox.vgrow="ALWAYS">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="30.0" vgrow="NEVER"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <Label text="Label"/>
+                <TableView GridPane.rowIndex="1" fx:id="tblDuellist">
+                </TableView>
+            </children>
+        </GridPane>
+    </children>
 </VBox>
