--- a/ui/src/main/resources/cz/masci/drd/ui/battle/slide/controller/impl/fxml/battle-select-action-slide.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/slide/controller/impl/fxml/battle-select-action-slide.fxml
@@ -24,7 +24,9 @@
   -->
 
 
-<BorderPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
+        AnchorPane.topAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0"
+>
    <top>
       <GridPane hgap="5.0" vgap="5.0" BorderPane.alignment="CENTER">
         <columnConstraints>
