--- a/ui/src/main/resources/cz/masci/drd/ui/battle/action/controller/fxml/other-action.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/action/controller/fxml/other-action.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -22,14 +23,21 @@
   ~  along with Foobar. If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-    <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0"/>
-        <ColumnConstraints hgrow="ALWAYS" minWidth="200.0"/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints minHeight="25.0" prefHeight="30" valignment="CENTER" vgrow="NEVER"/>
-    </rowConstraints>
-    <Label text="Obránce"/>
-    <ComboBox fx:id="duellistBox" prefHeight="25.0" prefWidth="400.0" GridPane.columnIndex="1"/>
-</GridPane>
+<VBox prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <HBox spacing="10.0">
+         <children>
+            <Label text="Bojovník" />
+            <Label text="XYZ" />
+            <Label minWidth="-Infinity" text="provádí akci" />
+            <Label text="X" />
+         </children>
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+      </HBox>
+   </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
+</VBox>
