--- a/ui/src/main/resources/cz/masci/drd/ui/battle/slide/controller/impl/fxml/battle-duellist-slide.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/slide/controller/impl/fxml/battle-duellist-slide.fxml
@@ -37,6 +37,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
                 <Label text="Název"/>
@@ -45,8 +46,10 @@
                 <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="txtOffense"/>
                 <Label text="Obranné číslo" GridPane.rowIndex="2"/>
                 <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="txtDefense"/>
-                <Label text="Životy" GridPane.rowIndex="3"/>
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="txtLive"/>
+                <Label text="Útočnost" GridPane.rowIndex="3"/>
+                <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="txtDamage"/>
+                <Label text="Životy" GridPane.rowIndex="4"/>
+                <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" fx:id="txtLive"/>
             </children>
         </GridPane>
         <FlowPane hgap="10.0" VBox.vgrow="NEVER">
