--- a/ui/src/main/resources/cz/masci/drd/ui/battle/action/controller/fxml/magic-action.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/action/controller/fxml/magic-action.fxml
@@ -23,23 +23,33 @@
   ~  along with Foobar. If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<VBox prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <HBox spacing="10.0">
-         <children>
-            <Label text="Bojovník" />
-            <Label text="XYZ" />
-            <Label minWidth="-Infinity" text="sesílá kouzlo" />
-            <Label text="X" />
-            <Label text="na bojovníka" />
-            <Label text="ZYX" />
-         </children>
-         <VBox.margin>
-            <Insets bottom="10.0" />
-         </VBox.margin>
-      </HBox>
-   </children>
-   <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-   </padding>
+<VBox fx:id="root" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <HBox spacing="10.0">
+            <children>
+                <Label text="Bojovník"/>
+                <Label fx:id="attackAttacker" text="XYZ"/>
+                <Label minWidth="-Infinity" text="sesílá kouzlo"/>
+                <Label fx:id="spell" text="X"/>
+                <Label text="na bojovníka"/>
+                <Label fx:id="attackDefender" text="ZYX"/>
+            </children>
+            <VBox.margin>
+                <Insets bottom="10.0"/>
+            </VBox.margin>
+        </HBox>
+        <HBox spacing="10.0">
+            <Label text="Bojovník byl zasažen za :"/>
+            <TextField fx:id="defenseResult" prefWidth="100.0" HBox.hgrow="NEVER"/>
+            <Label minWidth="-Infinity" text="životů"/>
+            <Label text="s počtem životů"/>
+            <Label fx:id="lifeDefender" text="5/6"/>
+            <VBox.margin>
+                <Insets bottom="10.0" top="10.0"/>
+            </VBox.margin>
+        </HBox>
+    </children>
+    <padding>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+    </padding>
 </VBox>
