--- a/ui/src/main/resources/cz/masci/drd/ui/battle/action/controller/fxml/shoot-action.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/action/controller/fxml/shoot-action.fxml
@@ -23,62 +23,59 @@
   ~  along with Foobar. If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<VBox prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <HBox spacing="10.0">
-         <children>
-            <Label text="Bojovník" />
-            <Label text="XYZ" />
-            <Label minWidth="-Infinity" text="střílí" />
-            <Label text="ZYX" />
-            <Label text="útokem :" />
-            <Label text="X" />
-            <Label text="+" />
-            <TextField prefWidth="100.0" HBox.hgrow="NEVER" />
-            <Label text="=" />
-            <Label text="Z" />
-         </children>
-         <VBox.margin>
-            <Insets bottom="10.0" />
-         </VBox.margin>
-      </HBox>
-      <HBox spacing="10.0">
-         <children>
-            <Label text="Bojovník" />
-            <Label text="ZYX" />
-            <Label minWidth="-Infinity" text="se brání střelbě" />
-            <Label text="XYZ" />
-            <Label text="obranou :" />
-            <Label text="M" />
-            <Label text="+" />
-            <TextField prefWidth="100.0" HBox.hgrow="NEVER" />
-            <Label text="=" />
-            <Label text="O" />
-         </children>
-         <VBox.margin>
-            <Insets bottom="10.0" top="10.0" />
-         </VBox.margin>
-      </HBox>
-      <HBox>
-         <children>
-            <Label text="Obránce se ubránil" />
-         </children>
-         <VBox.margin>
-            <Insets bottom="10.0" top="10.0" />
-         </VBox.margin>
-      </HBox>
-      <HBox spacing="10.0">
-         <children>
-            <Label text="Obrance byl zasažen za :" />
-            <TextField />
-            <Label minWidth="-Infinity" text="životů" />
-         </children>
-         <VBox.margin>
-            <Insets bottom="10.0" top="10.0" />
-         </VBox.margin>
-      </HBox>
-   </children>
-   <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-   </padding>
+
+<VBox fx:id="root" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <HBox spacing="10.0">
+            <Label text="Bojovník"/>
+            <Label fx:id="attackAttacker" text="XYZ"/>
+            <Label minWidth="-Infinity" text="střílí na"/>
+            <Label fx:id="attackDefender" text="ZYX"/>
+            <Label text="útokem :"/>
+            <Label fx:id="baseAttack" text="X"/>
+            <Label text="+"/>
+            <TextField fx:id="attackRoll" prefWidth="100.0" HBox.hgrow="NEVER"/>
+            <Label text="="/>
+            <Label fx:id="attack" text="Z"/>
+            <Label text="s počtem životů"/>
+            <Label fx:id="lifeAttacker" text="5/6"/>
+            <VBox.margin>
+                <Insets bottom="10.0"/>
+            </VBox.margin>
+        </HBox>
+        <HBox spacing="10.0">
+            <Label text="Bojovník"/>
+            <Label fx:id="defenseDefender" text="ZYX"/>
+            <Label minWidth="-Infinity" text="uhybá střelbě"/>
+            <Label fx:id="defenseAttacker" text="XYZ"/>
+            <Label text="obranou :"/>
+            <Label fx:id="baseDefense" text="M"/>
+            <Label text="+"/>
+            <TextField fx:id="defenseRoll" prefWidth="100.0" HBox.hgrow="NEVER"/>
+            <Label text="="/>
+            <Label fx:id="defense" text="O"/>
+            <Label text="s počtem životů"/>
+            <Label fx:id="lifeDefender" text="5/6"/>
+            <VBox.margin>
+                <Insets bottom="10.0" top="10.0"/>
+            </VBox.margin>
+        </HBox>
+        <HBox fx:id="defenseDefended">
+            <Label text="Obránce se ubránil"/>
+            <VBox.margin>
+                <Insets bottom="10.0" top="10.0"/>
+            </VBox.margin>
+        </HBox>
+        <HBox fx:id="defenseNotDefended" spacing="10.0">
+            <Label text="Obránce byl zasažen za :"/>
+            <TextField fx:id="defenseResult" prefWidth="100.0" HBox.hgrow="NEVER"/>
+            <Label minWidth="-Infinity" text="životů"/>
+            <VBox.margin>
+                <Insets bottom="10.0" top="10.0"/>
+            </VBox.margin>
+        </HBox>
+    </children>
+    <padding>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+    </padding>
 </VBox>
